Make Sonar happy